# iFly-NDB

./: .gitattributes  .gitignore  Cargo.toml  Command.txt  Fenix2iFlyNDBConverter.py  README.md  airport.py  build.rs  diff.py  enroute.py  insert_route.py  legs.py  list.py  verify.py  wpnavaid.py
Enroute/: airport.py  enroute.py  supp.py  wpnavaid.py  wpnavapt.py  wpnavfix.py
Enroute/Route/: check_route.py  insert_route.py  order_route.py  wpnavrte.py
PySrc/: Fenix2iFlyNDBConverter.py
PySrc/Enroute/: supp.py  wpnavaid.py  wpnavapt.py
PySrc/Enroute/Route/: check_route.py  order_route.py  wpnavrte.py
PySrc/Terminal/: legs.py  list.py  merged_data.py
Terminals/: legs.py  list.py  merged_data.py
ruterminals/: Cargo.toml
ruterminals/src/: legs.rs  list.rs  merged_data.rs
src/: common.rs  layout.rs  main.rs  terminal.rs
src/enroute/: mod.rs  route.rs
src/geomag/: geomag_wmm.rs  magnetic.rs  mod.rs
src/terminal/: mod.rs  terminal.rs
src/terminals/: mod.rs
